# pyolab3

./: .gitignore  LICENSE  README.md  pyproject.toml
DaqExample/: userExample.py  userGlobals.py
Documentation/: FixedSensorConfig.xlsx  IOLab_SensorData_Summary.docx  example_data.txt  markdown.md  old_csharp_code.cs  pyolab_license.txt  record_example_1.docx  record_example_2.docx
Examples/AnalogExample/: userExample.py  userGlobals.py  userMethods.py
Examples/DaqExample/: userExample.py  userMethods.py
Examples/HelloWorld/: userExample.py
Examples/guiExample/: userExample.py  userGlobals.py  userMethods.py
HelloWorld/: userExample.py
PyOLabCode/: commMethods.py  dataMethods.py  iolabInfo.py  pyolabGlobals.py  setupMethods.py
guiExample/: userExample.py  userMethods.py
src/pyolab3/: analClass.py  commMethods.py  dataMethods.py  pyolabGlobals.py  setupMethods.py
